Fix Login White Space Issues

--- a/src/containers/FooderMenu/FooderMenu.module.css
+++ b/src/containers/FooderMenu/FooderMenu.module.css
@@ -91,7 +91,6 @@
 
 .checkboxOne label {
   font-size: 16px;
-  margin-left: 10px;
 }
 
 .checkboxOne p {
